infra/k8s/load-balancer/ingress-load-balancer.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-load-balancer
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 3000
          - path: /posts/?(.*)
            pathType: Prefix
            backend:
              service:
                name: post-service
                port:
                  number: 4000
          - path: /comments/?(.*)
            pathType: Prefix
            backend:
              service:
                name: comments-service
                port:
                  number: 4001
          - path: /query/?(.*)
            pathType: Prefix
            backend:
              service:
                name: query-service
                port:
                  number: 4002
